--- a/03.LandingPage/index.html
+++ b/03.LandingPage/index.html
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="#comments">Acerca</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
+                  <a class="nav-link" href="#contacto">Contacto</a>
               </li>
           </ul>
       </div>
@@ -107,21 +107,21 @@
                         <div class="carousel-item active">
                           <img src="images/servicio1.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>Ofrecemos</h5>
+                            <h3>Ofrecemos</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, doloremque.</p>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <img src="images/servicio2.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>Ofrecemos</h5>
+                            <h3>Ofrecemos</h3>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, deleniti!</p>
                           </div>
                         </div>
                         <div class="carousel-item">
                           <img src="images/servicio3.jpg" class="d-block w-100" alt="...">
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>Ofrecemos</h5>
+                            <h3>Ofrecemos</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, recusandae.</p>
                           </div>
                         </div>
@@ -145,23 +145,51 @@
            </section>
          <!-- END´S INFO -->
 
+          
+         <!-- INFO DOS -->
+           <section id="info-two">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <h4>Comentarios de los clientes</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium illo nostrum maxime in nisi aspernatur!</p>
+                </div>
+                <div class="col-md-6">
+                  <h4>Comentarios de los clientes</h4>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, quas eius repellendus iure numquam adipisci.</p>
+                </div>
+              </div>
+            </div>
+           </section>
 
 
 
+          <!-- END´S INFO DOS -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+           <!-- FOOTER -->
+           <footer id="contacto">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-5">
+                  <form class="card">
+                    <div class="card-body">
+                      <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Nombre">
+                      </div>
+                      <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Correo">
+                      </div>
+                      <div class="form-group">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escribenos" rows="10"></textarea>
+                      </div>
+                      <button type="button" class="btn btn-outline-success">Enviar</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+           </footer>
+          <!-- END´S FOOTER -->
 
     <!--SCRIPTS DE BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
